Added Slideshow & Text update

--- a/games/index.html
+++ b/games/index.html
@@ -79,11 +79,12 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<p>Prioritize, Produce, Playtest: Iterative Audio Systems Design in Modern Video Games<br><br>Sed id semper risus in hendrerit gravida rutrum. Amet nisl suscipit adipiscing bibendum est ultricies integer. Nunc aliquet bibendum enim facilisis gravida neque convallis a cras. A iaculis at erat pellentesque adipiscing commodo elit at. Sit amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus. Nam at lectus urna duis convallis convallis. Dictum non consectetur a erat nam. Enim sit amet venenatis urna cursus eget.</p>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/4WZWqboFIuA" title="YouTube video player, showing the video component of Logan's thesis on technical sound design. The video is unfortunately not accessible, as the captions explaining each sound and iteration are " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/4WZWqboFIuA" title="YouTube video player, showing the video component of Logan's thesis on technical sound design. The video is unfortunately not accessible, as the captions explaining each sound and iteration are " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-slideshow-embed" src="https://docs.google.com/presentation/d/e/2PACX-1vQILrF1h5PX8bnlpLd31Tak1mKvQmsWZQmC_PLxb9i-gn-VCxcAwd5QL9aVWdI7G7I7GHnoD0pkeJKO/embed?start=false&loop=true&delayms=30000" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 				<a class="undecorated-links" href="https://library.scad.edu/record=b1937300">
-					<button class="download-button">Check out the GitHub Project</button>
+					<button class="download-button">See the GitHub Project</button>
 				</a>
 				<a class="undecorated-links" href="https://library.scad.edu/record=b1937300">
 					<button class="download-button">Read the paper</button>
@@ -133,11 +134,11 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3>The House Where They Dwell</h3>
-				<p>The horror was supposed to be staged.<br><br>The House Where They Dwell is a first-person cooperative game from Half-Brain Games (fellow students) where you and your ghost-hunting TV show crew escape the house. It was built in Unreal Engine 4 using the native audio engine and Blueprints, and version controlled with Git. I operated as Audio Director and worked with 5 other Sound Design students to produce the score, VO, sound effects, and ultimate audio vision, as well as being the primary audio implementation and scripter.<br><br>Some of the largest challenges we faced were with sheer audio scope, due to the large variety of enemies, items, and physics interactions between them. Dealing with audio for split-screen was no slouch either, although features of UE4 developed for Fortnite helped immensely. I'm most proud of the physics audio (where we covered it) and the VO.</p>
+				<p>The horror was supposed to be staged.<br><br>The House Where They Dwell is a first-person cooperative game from Half-Brain Games where you and your ghost-hunting TV show crew escape the house, built in Unreal Engine 4 using the native audio engine and Blueprints, and version controlled with Git. I was the Audio Director and audio dev, working with a team of 5 to produce and implement the score, VO, sound effects, and audio vision.<br><br>Some of the largest challenges we faced were with sheer audio scope, with the variety of enemies, items, and physics interactions (let alone split-screen audio). I'm most proud of the physics audio, where we covered it, and the VO.</p>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/rjwaGpkC-1E" title="YouTube video player, with the trailer for The House Where They Dwell. Note that this game is not accessible, and is much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content.</p>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/rjwaGpkC-1E" title="YouTube video player, with the trailer for The House Where They Dwell, for which I did minor video edits and all audio edits, largely with game assets. Note that this game is not accessible, and is much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<p>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content. It's jank and buggy (pun not intended) but the vibes are immaculate.</p>
 				<a class="undecorated-links" href="https://store.steampowered.com/app/1759460/The_House_Where_They_Dwell/">
 					<button class="download-button">Download on Steam</button>
 				</a>
@@ -147,11 +148,11 @@
 			<hr class="minor_hr">
 			<div class="project-content-left">
 				<h3>Sumra</h3>
-				<p>Spring will come again.<br><br>Sumra is a first-person atmospheric puzzle game that my good friend Brittany Johnson and I were "outsourced" for. It was developed completely in Unreal Engine 4, which led to plenty of fun with Blueprints and the native audio engine, and version controlled with Perforce. My primary focus was environment and item interactions, as well as general implementation and rough attempts to work with linear in-engine cinematics.</p>
+				<p>Spring will come again.<br><br>Sumra is a first-person atmospheric puzzle game that my good friend Brittany Johnson and I were "outsourced" for. It was developed completely in Unreal Engine 4, which led to plenty of fun with Blueprints and the native audio engine, and version controlled with Perforce. My primary focus was environment and item interactions, as well as general implementation and rough attempts to work with linear in-engine cinematics. For our efforts, we won an award for Best Game Sound at SCAD's 2020 Entelechy Awards.</p>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ea9yLA2ndrI" title="YouTube video player, with the trailer for Sumra. Note that this game is not accessible." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>For our efforts, we won an award for Best Game Sound at SCAD's 2020 Entelechy Awards. You can view the project's website <a class="decorated-links" href="https://sumragame.wixsite.com/sumra">here</a> for more information.</p>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ea9yLA2ndrI" title="YouTube video player, with the trailer for Sumra, for which I did most of the audio editing. Note that this game is not accessible, and much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<p>You can view the project's website <a class="decorated-links" href="https://sumragame.wixsite.com/sumra">here</a> for more information.</p>
 				<a class="undecorated-links" href="https://drive.google.com/file/d/19CajfnW80dc4EeD3MGHF8TOU-q8x6ZQ-/view?usp=sharing">
 					<button class="download-button">Download from Google Drive</button>
 				</a>
