PC: Fix HR & Margins
Some adjustments to top margins in some parts of text, as well as changing minor hr's to be thinner.

--- a/more/index.html
+++ b/more/index.html
@@ -57,43 +57,43 @@
 		<h2 class="project-title">Reaper Scripts</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p>A repository of Reapack compliant Lua scripts used for Reaper. Mostly simple utilities.<br>If you're interested and have Reapack, go to Extensions > Reapack > Import Repositories... and paste the following:</p>
-				<a href="https://raw.githubusercontent.com/Snoopy20111/snoop-ReaScripts/main/index.xml">
-				<p>https://raw.githubusercontent.com/Snoopy20111/snoop-ReaScripts/main/index.xml</p>
+				<p class="remove-top-margin-text">A repository of Reapack compliant Lua scripts used for Reaper. Mostly simple utilities.<br>If you're interested and have Reapack, go to Extensions > Reapack > Import Repositories... and paste the following:</p>
+				<a class="decorated-links" href="https://raw.githubusercontent.com/Snoopy20111/snoop-ReaScripts/main/index.xml">
+					<p>https://raw.githubusercontent.com/Snoopy20111/snoop-ReaScripts/main/index.xml</p>
 				</a>
 			</div>
 			<div class="project-content-right">
-				<img src="../images/ReaScripts_onPage.jpg" alt="Temp" />
+				<img src="../images/ReaScripts_onPage.jpg" alt="Logo for Reaper, Logan's favorite Digital Audio Workstation." />
 				<p></p>
 				<a class="undecorated-links" href="https://github.com/Snoopy20111/snoop-ReaScripts">
 					<button class="download-button">See the Github Repo</button>
 				</a>
 			</div>
 		</div>
+		<hr class="minor_hr">
 		<div class="project-div">
-			<hr class="minor_hr">
 			<div class="project-content-left">
-				<h3>Region Utility</h3>
+				<h3 class="subproject-title">Region Utility</h3>
 				<p>Making Regions less tedious.<br><br>Currently makes a region for every selected media item, named after and assigned to its track. Further plans include adding a GUI, more options for names and region matrix assignments, and also better naming/numbering.</p>
 			</div>
 			<div class="project-content-right">
 				<img class="img-reascript-gif" src="../images/ReaScripts_Regions_Util.gif" alt="A gif depicting the Region Utility script in action. The names of two tracks are shown, followed by the user selecting two media items, and running the script, after which each item has a region created bounding each item named after the tracks." />
 			</div>
 		</div>
+		<hr class="minor_hr">
 		<div class="project-div">
 			<div class="project-content-left">
 				<img class="img-reascript-gif" src="../images/ReaScripts_SnapToEndOfMediaItems.gif" alt="A gif depicting the Snap To End of Media Items script in action. Two media items, with ends before and after a grid line, are selected. When the script is run, the two items' ends snap to the same grid line." />
 			</div>
 			<div class="project-content-right">
-				<hr class="minor_hr">
-				<h3>Snap End of Media Items</h3>
+				<h3 class="subproject-title">Snap End of Media Items</h3>
 				<p>Moves selected media items so their ends meet the nearest grid-line.<br><br>Pairs well with scripts that don't cut media items on gridlines. Makes it much easier to edit, make regions over, etc.</p>
 			</div>
 		</div>
+		<hr class="minor_hr">
 		<div class="project-div">
 			<div class="project-content-left">
-				<hr class="minor_hr">
-				<h3>Region Prefix/Suffix</h3>
+				<h3 class="subproject-title">Region Prefix/Suffix</h3>
 				<p>For adjusting Region names en masse.<br><br>Largely edited from Acendan's region enumeration script, and similar to the ReaPack standards Find And Replace in Regions/Markers (also written by Acendan). Please go look at his scripts and other work, especially with the UCS.</p>
 			</div>
 			<div class="project-content-left">
@@ -126,11 +126,11 @@
 		<h2 class="project-title">Sound Redesigns</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<h3>Halo 3: ODST</h3>
+				<h3 class="subproject-title">Halo 3: ODST</h3>
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/HdBcm-ChUrU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
-				<h3>Placeholder 2: The Return of Audio</h3>
+				<h3 class="subproject-title">Placeholder Title</h3>
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/vuzy2OsVy1c" title="YouTube video player with a funny placeholder video, showing sequences from The Simpsons overdubbed with sfx and voicelines from the 1998 game Half-Life." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
@@ -141,7 +141,7 @@
 		<h2 class="project-title">In Living Color (Art)</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p>Aliquam sem et tortor consequat id porta nibh venenatis cras. Parturient montes nascetur ridiculus mus mauris vitae. Sit amet porttitor eget dolor. Vivamus at augue eget arcu dictum varius duis at consectetur. Praesent elementum facilisis leo vel fringilla est ullamcorper. Suspendisse interdum consectetur libero id faucibus. Aliquam id diam maecenas ultricies mi eget. Amet cursus sit amet dictum. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique.</p>
+				<p class="remove-top-margin-text">Aliquam sem et tortor consequat id porta nibh venenatis cras. Parturient montes nascetur ridiculus mus mauris vitae. Sit amet porttitor eget dolor. Vivamus at augue eget arcu dictum varius duis at consectetur. Praesent elementum facilisis leo vel fringilla est ullamcorper. Suspendisse interdum consectetur libero id faucibus. Aliquam id diam maecenas ultricies mi eget. Amet cursus sit amet dictum. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique.</p>
 			</div>
 			<iframe class="project-video-embed" src="https://www.youtube.com/embed/UDA2EpzhcHI" title="YouTube video player, with a screen recording of In Living Color running." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			<p></p>
