--- a/games/index.html
+++ b/games/index.html
@@ -57,7 +57,7 @@
 		<h2 class="project-title">Forza Motorsport</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae justo eget magna fermentum iaculis eu non diam. Nibh venenatis cras sed felis eget velit aliquet sagittis. Volutpat consequat mauris nunc congue nisi vitae. Suscipit adipiscing bibendum est ultricies. Eu scelerisque felis imperdiet proin fermentum leo vel orci. Egestas sed tempus urna et pharetra pharetra massa. Id interdum velit laoreet id. Nibh mauris cursus mattis molestie a iaculis at erat. Egestas quis ipsum suspendisse ultrices gravida. Orci eu lobortis elementum nibh tellus molestie nunc non.</p>
+				<p class="remove-top-margin-text">See you at the starting line!<br><br>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae justo eget magna fermentum iaculis eu non diam. Nibh venenatis cras sed felis eget velit aliquet sagittis. Volutpat consequat mauris nunc congue nisi vitae. Suscipit adipiscing bibendum est ultricies. Eu scelerisque felis imperdiet proin fermentum leo vel orci. Egestas sed tempus urna et pharetra pharetra massa.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -68,7 +68,7 @@
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube player showing video for Forza Motorsport's Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
-				<p>Tristique nulla aliquet enim tortor at auctor urna. Nullam vehicula ipsum a arcu. Quis varius quam quisque id diam vel quam elementum pulvinar. Neque viverra justo nec ultrices dui sapien eget. Ultricies leo integer malesuada nunc vel risus commodo. A erat nam at lectus. Nec feugiat in fermentum posuere urna. Sapien eget mi proin sed. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere lorem. Porta lorem mollis aliquam ut porttitor leo a diam sollicitudin. Risus viverra adipiscing at in. Et malesuada fames ac turpis. Quam id leo in vitae. Vulputate ut pharetra sit amet aliquam id diam. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Facilisis sed odio morbi quis commodo odio aenean sed adipiscing.</p>
+				<p>Tristique nulla aliquet enim tortor at auctor urna. Nullam vehicula ipsum a arcu. Quis varius quam quisque id diam vel quam elementum pulvinar. Neque viverra justo nec ultrices dui sapien eget. Ultricies leo integer malesuada nunc vel risus commodo. A erat nam at lectus. Nec feugiat in fermentum posuere urna. Sapien eget mi proin sed. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere lorem. Porta lorem mollis aliquam ut porttitor leo a diam sollicitudin.</p>
 			</div>
 		</div>
 	</div>
@@ -78,7 +78,7 @@
 		<h2 class="project-title">Thesis</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p>Prioritize, Produce, Playtest: Iterative Audio Systems Design in Modern Video Games<br><br>For my Master of Fine Arts thesis, I basically did and wrote about my discipline: the job of the Technical Sound Designer. To do so I expanded on Unity's 2018 FPS Sample project, re-implementing the audio via FMOD Studio and expanding further on certain systems using C#.</p>
+				<p class="remove-top-margin-text">Prioritize, Produce, Playtest: Iterative Audio Systems Design in Modern Video Games<br><br>For my Master of Fine Arts thesis, I basically did and wrote about my discipline: the job of the Technical Sound Designer. To do so I expanded on Unity's 2018 FPS Sample project, re-implementing the audio via FMOD Studio and expanding further on certain systems using C#.</p>
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/4WZWqboFIuA" title="YouTube video player, showing the video component of Logan's thesis on technical sound design. The video is unfortunately not accessible, as the captions explaining each sound and iteration are " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
@@ -99,14 +99,14 @@
 		<h2 class="project-title">Roboxing</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p>Arcade-style, 1v1 Robot boxing.<br><br>This project was made with my friend Tyler Eichten in collaboration with Husky Game Development at Michigan Tech University. It was originally developed for an arcade cabinet, but was later adapted to work with Xbox-style controllers. The game was written in Unity, integrated with FMOD Studio, and used Github for version control.</p>
+				<p class="remove-top-margin-text">Arcade-style, 1v1 Robot boxing.<br><br>This project was made with my friend Tyler Eichten in collaboration with <a class="decorated-links" href="https://huskygames.com/">Husky Game Development</a> at Michigan Tech University. Originally built for an arcade cabinet, we later adapted it to work with Xbox-style controllers. The game was written in Unity, integrated with FMOD Studio, and used Github for version control.</p>
 			</div>
 			<div class="project-content-left">
 				<iframe class="project-bandcamp-embed" id="roboxing-bandcamp" src="https://bandcamp.com/EmbeddedPlayer/album=1743901494/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" title="Bandcamp player for Roboxing OST album"seamless><a href="https://snoopy20111.bandcamp.com/album/roboxing">Roboxing by Logan Hardin</a></iframe>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/l1bBcV8COYI" title="Roboxing screen recording, demonstrating the sound and action of the game" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>The full soundtrack is available for free from Bandcamp, embedded here. The game is similarly available for free below.</p>
+				<p>The full soundtrack is available for free from Bandcamp (embedded), and the game is available for free below.</p>
 				<a class="undecorated-links" href="https://tyler-eichten.itch.io/roboxing">
 					<button class="download-button">Download on Itch.io</button>
 				</a>
@@ -119,12 +119,12 @@
 		<h2 class="project-title">Triseum &#38; LIVE Lab</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p>Games for education and research.<br><br>In November 2016, I was contracted to do music composition work for Triseum LTD, a developer in Bryan, TX known for their Arté and Variant higher-level educational game series. From January through August 2017, I was also involved with related projects with the LIVE Lab at Texas A&#38;M, an educational research lab focused on game development.</p>
+				<p class="remove-top-margin-text">Games for education and research.<br><br>In November 2016, I was contracted to do music composition work for Triseum LTD, a developer in Bryan, TX known for their Arté and Variant higher-level educational game series. From January through August 2017, I was also involved with related projects with the LIVE Lab at Texas A&#38;M, an educational research lab focused on game development.</p>
 			</div>
 			<img class="project-content-right" id="img-arte-lumiere" src="../images/ARTe-Lumiere.jpg" alt="Screenshot from Arte Lumiere, another Triseum title" />
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="Trailer for Variant: Limits, one of Triseum's successful titles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing diam donec adipiscing tristique risus nec feugiat in. Viverra ipsum nunc aliquet bibendum enim facilisis gravida neque. Risus at ultrices mi tempus imperdiet nulla malesuada. Diam maecenas ultricies mi eget mauris. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Pretium viverra suspendisse potenti nullam. Magna fermentum iaculis eu non diam phasellus.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing diam donec adipiscing tristique risus nec feugiat in. Viverra ipsum nunc aliquet bibendum enim facilisis gravida neque. Risus at ultrices mi tempus imperdiet nulla malesuada. Diam maecenas ultricies mi eget mauris. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras.</p>
 			</div>
 		</div>
 	</div>
@@ -134,7 +134,7 @@
 		<h2 class="project-title">Student Games</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<h3>The House Where They Dwell</h3>
+				<h3 class="subproject-title">The House Where They Dwell</h3>
 				<p>The horror was supposed to be staged.<br><br>The House Where They Dwell is a first-person cooperative game from Half-Brain Games where you and your ghost-hunting TV show crew escape the house, built in Unreal Engine 4 using the native audio engine and Blueprints, and version controlled with Git. I was the Audio Director and audio dev, working with a team of 5 to produce and implement the score, VO, sound effects, and audio vision.<br><br>Some of the largest challenges we faced were with sheer audio scope, with the variety of enemies, items, and physics interactions (let alone split-screen audio). I'm most proud of the physics audio, where we covered it, and the VO.</p>
 			</div>
 			<div class="project-content-right">
@@ -145,10 +145,10 @@
 				</a>
 			</div>
 		</div>
+		<hr class="minor_hr">
 		<div class="project-div">
-			<hr class="minor_hr">
 			<div class="project-content-left">
-				<h3>Sumra</h3>
+				<h3 class="subproject-title">Sumra</h3>
 				<p>Spring will come again.<br><br>Sumra is a first-person atmospheric puzzle game that my good friend Brittany Johnson and I were "outsourced" for. It was developed completely in Unreal Engine 4, which led to plenty of fun with Blueprints and the native audio engine, and version controlled with Perforce. My primary focus was environment and item interactions, as well as general implementation and rough attempts to work with linear in-engine cinematics. For our efforts, we won an award for Best Game Sound at SCAD's 2020 Entelechy Awards.</p>
 			</div>
 			<div class="project-content-right">
@@ -159,10 +159,10 @@
 				</a>
 			</div>
 		</div>
+		<hr class="minor_hr">
 		<div class="project-div">
-			<hr class="minor_hr">
 			<div class="project-content-left">
-				<h3>FooFarYall</h3>
+				<h3 class="subproject-title">FooFarYall</h3>
 				<p>Local Competitive minigames.<br><br>A silly little Western game, made for Chillennium Game Jam 2016, using Unity and <a class="decorated-links" href="https://fungusgames.com/">Fungus,</a> played on one keyboard. All music (and some sound effects) were recorded on-site during that time. For our efforts we won the award for Special Recognition in Sound; this project directly led to me pursuing Game Audio as a viable career, and to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum & the LIVE Lab.</a></p>
 				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=2691759572/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=382131293/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
