--- a/games/index.html
+++ b/games/index.html
@@ -78,12 +78,12 @@
 		<h2 class="project-title">Thesis</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Prioritize, Produce, Playtest: Iterative Audio Systems Design in Modern Video Games<br><br>For my Master of Fine Arts thesis, I basically did and wrote about my discipline: the job of the Technical Sound Designer. To do so I expanded on Unity's 2018 FPS Sample project, re-implementing the audio via FMOD Studio and expanding further on certain systems using C#.</p>
+				<p class="remove-top-margin-text">Prioritize, Produce, Playtest: Iterative Audio Systems Design in Modern Video Games.<br><br>For my MFA thesis, I practiced and wrote about my discipline: the job of the Technical Sound Designer. To do so I expanded on Unity's 2018 FPS Sample project, re-implementing the audio via FMOD Studio and expanding further on certain systems using C#.<br><br></p>
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/4WZWqboFIuA" title="YouTube video player, showing the video component of Logan's thesis on technical sound design. The video is unfortunately not accessible, as the captions explaining each sound and iteration are " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-slideshow-embed" src="https://docs.google.com/presentation/d/e/2PACX-1vQILrF1h5PX8bnlpLd31Tak1mKvQmsWZQmC_PLxb9i-gn-VCxcAwd5QL9aVWdI7G7I7GHnoD0pkeJKO/embed?start=false&loop=true&delayms=30000" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-				<p>Ultimately, it was excellent, documented practice of the overall thought and work process, and helped give structure to the approach I use professionally today.</p>
+				<p>Technically, it was a challenge, as it was built with a home-grown ECS implementation before Unity properly supported it the following year.Ultimately, I was able to make it work. In terms of art and theory, it helped give structure to the approach I use professionally today.</p>
 				<a class="undecorated-links" href="https://library.scad.edu/record=b1937300">
 					<button class="download-button">See the GitHub Project</button>
 				</a>
