--- a/index.html
+++ b/index.html
@@ -58,20 +58,28 @@
 		</div>
 		<script src="https://player.vimeo.com/api/player.js"></script>
 	</div>
-<!--Temp disclaimer-->
+<!--Temp disclaimer, delete when "finished"-->
 	<div id="container-disclaimer-text">
 		<p>This site is under construction as I learn HTML.</p>
 	</div>
 	<hr class="main_hr">
 <!--Quick Links-->	
-	<div class="content-normal-div">
-		<h2>Quick Links</h2>
+	<div class="content-quicklinks-group-div">
+		<h2 class="content-quicklinks-group-title" >Quick Links</h2>
 		<div class="content-quick-link-div">
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Forza">
 				<div class="content-quick-link-box">
 					<img id="img-quicklink-prev" src="images/Forza-Preview.jpg" alt="A preview image for Forza Motorsport, bearing the name, logo, and cover art of the game. The cover art depicts two cars (a yellow Cadillac V-Series.R hypercar and a blue Chevrolet Corvette E-Ray) speeding towards the camera and to the right along a track with red and white curbing and an open blue sky behind." />
 					<h4>Forza Motorsport</h4>
+				</div>
+				</a>
+			</div>
+			<div class="content-quick-link-separator">
+				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Thesis">
+				<div class="content-quick-link-box">
+					<img id="img-quicklink-prev" src="images/Thesis-Preview.jpg" alt="A preview image for my Thesis, showing the two playable characters from the Unity FPS Sample, a slender human in an orange and white spacesuit and a taller brown and black imposing robot with a massive gun arm. Both stand in a rocky alien desert." />
+					<h4>Thesis</h4>
 				</div>
 				</a>
 			</div>
@@ -104,12 +112,12 @@
 	<hr class="main_hr">
 <!--Bio-->
 	<div class="content-bio-div">
-		<div class="content-bio-div-left">
-			<h2>Howdy!</h2>
-			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN.<br><br>[Main bio info will go here...this <i>is</i>  a site in progress after all, and my old bio page is years out of date.]<br><br>I'm interested in projects that push the bounds of what a game can be, no matter the team size or the genre. If you're interested in me or my work, please don't hesitate to reach out!</p>
+		<div>
+			<h2 class="remove-top-margin-text">Howdy!</h2>
+			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half Leanessa and our two dogs. Thanks for visiting!<br><br>I currently work with the fantastic folks at Turn 10 Studios on Forza Motorsport. That was my first AAA release, so before that, I got my MFA from the Savannah College of Art &#38; Design, and my Bachelor's at Texas A&#38;M.<br><br>When I'm not helping make the cars go vroom, I can be found <i>playing</i> video and board games (you know, for fun), watching Formula 1, playing music to myself, walking my dogs, or enjoying a beer.</p>
 		</div>
-		<div class="content-bio-div-right">
-			<img id="img-bio" src="images/Me.jpg" alt="A photo of me, from my wedding! I'm beaming-- a huge grin is hardly hidden by my short beard and mustache, and my eyes smile out from behind large black-framed glasses. I'm seated outdoors on a white chair in mostly-formal dress, clad in gray trousers and a white french-cuffed shirt rolled up to the elbows, with black suspenders, a black bow tie, and my usual low-swept crisp pompadour haircut. A white carnation clings to one suspender strap." />
+		<div>
+			<img id="img-bio" src="images/Me.jpg" alt="A photo of me, from my wedding! I'm beaming-- a huge grin is hardly hidden by my short beard and mustache, and my eyes smile out from behind large black-framed glasses. I'm seated outdoors on a white chair in mostly-formal dress, clad in gray trousers and a white french-cuffed shirt rolled up to the elbows, with black suspenders, a black bow tie, and my usual low-swept crisp pompadour haircut. A white carnation clings to one suspender strap."/>
 		</div>
 	</div>
 </div>
