Triseum Live Lab Content Update
Rewrote the content for my Triseum / Live Lab involvement. Will probably embed links here later.

--- a/games/index.html
+++ b/games/index.html
@@ -119,12 +119,12 @@
 		<h2 class="project-title">Triseum &#38; LIVE Lab</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Games for education and research.<br><br>In November 2016, I was contracted to do music composition work for Triseum LTD, a developer in Bryan, TX known for their Arté and Variant higher-level educational game series. From January through August 2017, I was also involved with related projects with the LIVE Lab at Texas A&#38;M, an educational research lab focused on game development.</p>
+				<p class="remove-top-margin-text">Games for education and research.<br><br>During my undergrad at Texas A&#38;M, I worked with the Live Lab, an educational research lab focused on game-based learning. I additionally was contracted to do music composition work for Triseum LTD, a close developer partner of the Live Lab in Bryan, TX, known for their higher-level education game series.</p>
 			</div>
 			<img class="project-content-right" id="img-arte-lumiere" src="../images/ARTe-Lumiere.jpg" alt="Screenshot from Arte Lumiere, another Triseum title" />
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="Trailer for Variant: Limits, one of Triseum's successful titles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing diam donec adipiscing tristique risus nec feugiat in. Viverra ipsum nunc aliquet bibendum enim facilisis gravida neque. Risus at ultrices mi tempus imperdiet nulla malesuada. Diam maecenas ultricies mi eget mauris. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras.</p>
+				<p>It was my first taste of professional game development, and allowed me to cut my teeth for a good cause as I distanced myself from Game Art. While no games I worked on, to my knowledge, shipped with sounds or music I produced, their influence remained and helped identify the tone and emotional shape of the projects. Some never made it past the Live Lab's prototypes, but others like Variant: Limits and Artè: Lumière had full releases.</p>
 			</div>
 		</div>
 	</div>
