--- a/more/index.html
+++ b/more/index.html
@@ -104,10 +104,10 @@
 <!--Solar Science-->
 	<div id="SolarScience">
 	<hr class="main_hr">
+	<h2 class="project-title">Solar Science</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<h2>Solar Science</h2>
-				<p>Kerbal Space Program Mod.<br>Praise the Sun!<br><br>This was a project I originally undertook during my senior year of high school as a directed study. I modeled, textured, animated, and scripted two new experiment parts, based upon those aboard NASA's real SOHO and STEREO missions. Over the years I made small additions, such as experiment requirements, custom sfx, and loading real-time images from NASA's feeds when the experiment is run. As KSP is made in Unity, I used it and C# extensively.</p>
+				<p class="remove-top-margin-text">Kerbal Space Program Mod.<br>Praise the Sun!<br><br>This was a project I originally undertook during my senior year of high school as a directed study. I modeled, textured, animated, and scripted two new experiment parts, based upon those aboard NASA's real SOHO and STEREO missions. Over the years I made small additions, such as experiment requirements, custom sfx, and loading real-time images from NASA's feeds when the experiment is run. As KSP is made in Unity, I used it and C# extensively.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/3WlT3HZsg2U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
