--- a/index.html
+++ b/index.html
@@ -120,6 +120,37 @@
 			<img id="img-bio" src="images/Me.jpg" alt="A photo of me, from my wedding! I'm beaming-- a huge grin is hardly hidden by my short beard and mustache, and my eyes smile out from behind large black-framed glasses. I'm seated outdoors on a white chair in mostly-formal dress, clad in gray trousers and a white french-cuffed shirt rolled up to the elbows, with black suspenders, a black bow tie, and my usual low-swept crisp pompadour haircut. A white carnation clings to one suspender strap."/>
 		</div>
 	</div>
+	<div class="content-bio-favgames-div">
+		<div class="content-bio-favgames-column">
+			<h4 class="remove-top-margin-text">Favorite games lately:</h4>
+			<ul>
+				<li>Morrowind</li>
+				<li>Dredge</li>
+				<li>Art of Rally</li>
+				<li>Tsuro of the Seas</li>
+				<li>Toy Soldiers</li>
+			</ul>
+		</div>
+		<div class="content-bio-favgames-column">
+			<h4 class="remove-top-margin-text">Anticipated games:</h4>
+			<ul>
+				<li>Dwarf Fortress (Adventure Mode w/ Graphics)</li>
+				<li>Haunted Chocolatier</li>
+			</ul>
+			<h6>I don't anticipate many games because I'm behind the curve as it is. So many good ones already out, so many I just don't know about yet!</h6>
+		</div>
+		<div class="content-bio-favgames-column">
+			<h4 class="remove-top-margin-text">Favorite sounding games:</h4>
+			<ul>
+				<li>Call of Duty 2</li>
+				<li>Outer Wilds</li>
+				<li>Battlefield (3 and 1943)</li>
+				<li>Railroad Tycoon 3</li>
+				<li>Dino Run (Flash)</li>
+				<li>Mud and Blood 2 (Flash)</li>
+			</ul>
+		</div>
+	</div>
 </div>
 
 <!--Footer, similar links as header-->
