Games Content Update
Added links, wrote/edited text, and generally filled the pages appropriately.

--- a/games/index.html
+++ b/games/index.html
@@ -119,12 +119,12 @@
 		<h2 class="project-title">Triseum &#38; LIVE Lab</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Games for education and research.<br><br>During my undergrad at Texas A&#38;M, I worked with the Live Lab, an educational research lab focused on game-based learning. I additionally was contracted to do music composition work for Triseum LTD, a close developer partner of the Live Lab in Bryan, TX, known for their higher-level education game series.</p>
+				<p class="remove-top-margin-text">Games for education and research.<br><br>During my undergrad at Texas A&#38;M, I worked with the <a class="decorated-links" href="https://pvfa.tamu.edu/research/live-lab/">Learning Interactive Visualization Experience (LIVE) Lab,</a> an educational research lab focused on game-based learning. I additionally was contracted to do music composition work for <a class="decorated-links" href="https://triseum.com/">Triseum LTD,</a> a close developer partner of the LIVE Lab in Bryan, TX, known for their higher-level education game series.</p>
 			</div>
 			<img class="project-content-right" id="img-arte-lumiere" src="../images/ARTe-Lumiere.jpg" alt="Screenshot from Arte Lumiere, another Triseum title" />
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="Trailer for Variant: Limits, one of Triseum's successful titles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>It was my first taste of professional game development, and allowed me to cut my teeth for a good cause as I distanced myself from Game Art. While no games I worked on, to my knowledge, shipped with sounds or music I produced, their influence remained and helped identify the tone and emotional shape of the projects. Some never made it past the Live Lab's prototypes, but others like Variant: Limits and Artè: Lumière had full releases.</p>
+				<p>It was my first taste of professional game development, and allowed me to cut my teeth for a good cause as I distanced myself from Game Art. While no games I worked on saw release with sounds or music I produced, their influence remained and helped identify the tone and emotional shape of the projects, including Variant: Limits and Artè: Lumière.</p>
 			</div>
 		</div>
 	</div>
@@ -135,7 +135,7 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">The House Where They Dwell</h3>
-				<p>The horror was supposed to be staged.<br><br>The House Where They Dwell is a first-person cooperative game from Half-Brain Games where you and your ghost-hunting TV show crew escape the house, built in Unreal Engine 4 using the native audio engine and Blueprints, and version controlled with Git. I was the Audio Director and audio dev, working with a team of 5 to produce and implement the score, VO, sound effects, and audio vision.<br><br>Some of the largest challenges we faced were with sheer audio scope, with the variety of enemies, items, and physics interactions (let alone split-screen audio). I'm most proud of the physics audio, where we covered it, and the VO.</p>
+				<p>The horror was supposed to be staged.<br><br>The House Where They Dwell is a first-person cooperative game from Half-Brain Games where you and your ghost-hunting TV show crew escape the house, built in Unreal Engine 4 (native audio engine and Blueprints) and version controlled with Git. I was the Audio Director and audio dev, working with a team of 5 to produce and implement the score, VO, sound effects, and audio vision.<br><br>Some of the largest challenges we faced were with sheer audio scope, with the variety of enemies, items, and physics interactions (let alone split-screen audio). I'm most proud of the physics audio, where we covered it, and the VO.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/rjwaGpkC-1E" title="YouTube video player, with the trailer for The House Where They Dwell, for which I did minor video edits and all audio edits, largely with game assets. Note that this game is not accessible, and is much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -149,7 +149,7 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">Sumra</h3>
-				<p>Spring will come again.<br><br>Sumra is a first-person atmospheric puzzle game that my good friend Brittany Johnson and I were "outsourced" for. It was developed completely in Unreal Engine 4, which led to plenty of fun with Blueprints and the native audio engine, and version controlled with Perforce. My primary focus was environment and item interactions, as well as general implementation and rough attempts to work with linear in-engine cinematics. For our efforts, we won an award for Best Game Sound at SCAD's 2020 Entelechy Awards.</p>
+				<p>Spring will come again.<br><br>Sumra is a first-person atmospheric puzzle game that my good friend Brittany Johnson and I were "outsourced" for. It was developed completely in Unreal Engine 4 (native audio engine and Blueprints) and version controlled with Perforce. My primary focus was environment and item interactions, as well as general implementation and rough attempts to work with linear in-engine cinematics. For our efforts, we won an award for Best Game Sound at SCAD's 2020 Entelechy Awards.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ea9yLA2ndrI" title="YouTube video player, with the trailer for Sumra, for which I did most of the audio editing. Note that this game is not accessible, and much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -163,13 +163,13 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">FooFarYall</h3>
-				<p>Local Competitive minigames.<br><br>A silly little Western game, made for Chillennium Game Jam 2016, using Unity and <a class="decorated-links" href="https://fungusgames.com/">Fungus,</a> played on one keyboard. All music (and some sound effects) were recorded on-site during that time. For our efforts we won the award for Special Recognition in Sound; this project directly led to me pursuing Game Audio as a viable career, and to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum & the LIVE Lab.</a></p>
+				<p>Crying over spilled milk.<br><br>A silly little Western game, made for Chillennium Game Jam 2016, using Unity and <a class="decorated-links" href="https://fungusgames.com/">Fungus,</a> played on one keyboard. All music (and some sound effects) were recorded  and edited on-site. For our efforts we won the award for Special Recognition in Sound; this project directly led to me pursuing Game Audio as a career, and to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum & the LIVE Lab.</a></p>
 				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=2691759572/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=382131293/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/C72M7S4osKU?si=jCPjNNMdQOeOqWbV" title="YouTube video player, with gameplay of FooFarYall. This game is not accessible, but frankly, you're not missing much." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>You can find both tracks on my Bandcamp album of miscellaneous tracks, and try the game with a friend if you like. </p>
+				<p>You can find both tracks on my <a class="decorated-links" href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Bandcamp album of miscellaneous tracks,</a> and try the game with a friend if you like. </p>
 				<a class="undecorated-links" href="https://embyrs.itch.io/foofaryall">
 					<button class="download-button">Download from Itch.io</button>
 				</a>
