More Content Scaling Fixes
Further hacky fixes to make things scale a little bit, moving images around to look nicer, etc.

--- a/more/index.html
+++ b/more/index.html
@@ -63,10 +63,9 @@
 				</a>
 			</div>
 			<div class="project-content-right">
-				<img src="../images/ReaScripts_onPage.jpg" alt="Logo for Reaper, Logan's favorite Digital Audio Workstation." />
-				<p></p>
+				<img id="img-reaper-logo" src="../images/ReaScripts_onPage.jpg" alt="Logo for Reaper, Logan's favorite Digital Audio Workstation."/>
 				<a class="undecorated-links" href="https://github.com/Snoopy20111/snoop-ReaScripts">
-					<button class="download-button">See the Github Repo</button>
+					<button class="download-button" style="margin-left:45px">See the Github Repo</button>
 				</a>
 			</div>
 		</div>
