More content updates

--- a/games/index.html
+++ b/games/index.html
@@ -132,6 +132,7 @@
 	<div id="StudentGames">
 	<hr class="main_hr">
 		<h2 class="project-title">Student Games</h2>
+<!--The House Where They Dwell-->
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">The House Where They Dwell</h3>
@@ -146,6 +147,7 @@
 			</div>
 		</div>
 		<hr class="minor_hr">
+<!--Sumra-->
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">Sumra</h3>
@@ -160,15 +162,22 @@
 			</div>
 		</div>
 		<hr class="minor_hr">
+<!--FooFarYall-->
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">FooFarYall</h3>
-				<p>Crying over spilled milk.<br><br>A silly little Western game, made for Chillennium Game Jam 2016, using Unity and <a class="decorated-links" href="https://fungusgames.com/">Fungus,</a> played on one keyboard. All music (and some sound effects) were recorded  and edited on-site. For our efforts we won the award for Special Recognition in Sound; this project directly led to me pursuing Game Audio as a career, and to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum & the LIVE Lab.</a></p>
+				<p>Crying over spilled milk.<br><br>A silly Western game, made for <a class="decorated-links" href="https://chillennium.com/">Chillennium Game Jam</a> 2016 with Unity and played on one keyboard. All music was recorded &#38; edited on-site. For our efforts we won the award for Special Recognition in Sound; this project directly led to me pursuing Game Audio as a career, and to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum &#38; the LIVE Lab.</a></p>
+			</div>
+			<div class="project-content-right">
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/C72M7S4osKU?si=jCPjNNMdQOeOqWbV" title="YouTube video player, with gameplay of FooFarYall. This game is not accessible, but frankly, you're not missing much." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>
+		</div>
+		<div class="project-follow-div">
+			<div class="project-content-left">
 				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=2691759572/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=382131293/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/C72M7S4osKU?si=jCPjNNMdQOeOqWbV" title="YouTube video player, with gameplay of FooFarYall. This game is not accessible, but frankly, you're not missing much." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>You can find both tracks on my <a class="decorated-links" href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Bandcamp album of miscellaneous tracks,</a> and try the game with a friend if you like. </p>
 				<a class="undecorated-links" href="https://embyrs.itch.io/foofaryall">
 					<button class="download-button">Download from Itch.io</button>
